--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "openai": "^4.67.1",
     "puppeteer": "^23.5.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
