--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "ai": "^3.4.9",
     "axios": "^1.7.7",
+    "chrome-launcher": "^1.1.2",
+    "lighthouse": "^12.2.1",
     "next": "14.2.14",
     "openai": "^4.67.1",
     "puppeteer": "^23.5.0",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-markdown": "^9.0.1"
   },
