--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.7",
+    "@langchain/mongodb": "^0.1.0",
+    "@langchain/openai": "^0.3.5",
+    "@langchain/textsplitters": "^0.1.0",
     "ai": "^3.4.9",
-    "axios": "^1.7.7",
     "chrome-launcher": "^1.1.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "fs": "^0.0.1-security",
+    "hacketon-2024-ai": "file:",
+    "langchain": "^0.3.2",
     "lighthouse": "^12.2.1",
+    "llm-chunk": "^0.0.1",
+    "mongodb": "^6.9.0",
     "next": "14.2.14",
     "openai": "^4.67.1",
     "puppeteer": "^23.5.0",
